Modified app-root directive into hotel-inventory-app-root directive

--- a/apps/hotelinventoryapp/src/app/app.html
+++ b/apps/hotelinventoryapp/src/app/app.html
@@ -1,2 +1,2 @@
-<app-nx-welcome></app-nx-welcome>
+<hotel-inventory-app-nx-welcome></hotel-inventory-app-nx-welcome>
 <router-outlet></router-outlet>
