--- a/apps/hotelinventoryapp/src/app/app.html
+++ b/apps/hotelinventoryapp/src/app/app.html
@@ -1,2 +1,3 @@
 <hotel-inventory-app-nx-welcome></hotel-inventory-app-nx-welcome>
+<hotel-inventory-app-rooms></hotel-inventory-app-rooms>
 <router-outlet></router-outlet>
