--- a/apps/hotelinventoryapp/src/app/rooms.html
+++ b/apps/hotelinventoryapp/src/app/rooms.html
@@ -1,2 +1,5 @@
 <h2>Welcome to {{hotelName}} </h2>
-<div [innerText]="numberOfRooms"></div>
+<div [hidden]="toggleRooms">
+    Number of rooms: <div [innerText]="numberOfRooms"></div>
+</div>
+<button (click)="toggle()">Toggle</button>
