--- a/apps/hotelinventoryapp/src/app/rooms.html
+++ b/apps/hotelinventoryapp/src/app/rooms.html
@@ -10,6 +10,11 @@
 
 @if (rooms.availableRooms && rooms.availableRooms > 5) {
     <div>Room List</div>
+    @for (room of roomList; track $index) {
+        <p>Room Type: {{room.roomType}}</p>
+        <p>Amenities: {{room.ameniites}}</p>
+        <p>Price: {{room.price}}</p>
+    }
 }
 <div class="button-container">
     <button (click)="toggle()">Toggle</button>
