--- a/apps/hotelinventoryapp/src/app/rooms.css
+++ b/apps/hotelinventoryapp/src/app/rooms.css
@@ -32,3 +32,22 @@ button {
     padding: 5px;
     margin: 5px;
 }
+
+table {
+    border-collapse: collapse
+
+}
+
+table, th, td {
+    border: 1px solid black;
+    padding: 8px;
+}
+
+.even {
+    background-color: grey;
+    color: white;
+}
+
+.odd {
+    background-color: cyan;
+}
