--- a/apps/hotelinventoryapp/src/app/rooms.css
+++ b/apps/hotelinventoryapp/src/app/rooms.css
@@ -34,8 +34,10 @@ button {
 }
 
 table {
-    border-collapse: collapse
-
+    border-collapse: collapse;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
 }
 
 table, th, td {
