--- a/apps/hotelinventoryapp/src/app/rooms.html
+++ b/apps/hotelinventoryapp/src/app/rooms.html
@@ -17,6 +17,7 @@
             <th>Amenities</th>
             <th>Room Price</th>
             <th>Checkin Time</th>
+            <th>Ratings</th>
         </tr>
     @for (room of roomList; track $index;) {
         <tr [class.even]="$index % 2 === 0" [class.odd]="$index % 2 !== 0">
@@ -25,6 +26,7 @@
             <td>{{room.amenities | titlecase }}</td>
             <td>{{room.price | currency}}</td>
             <td>{{room.checkingTime | date:'short'}}</td>
+            <td>{{room.ratings | number : '1.0-0'}}</td>
         </tr>
     }
     </table>
