--- a/apps/hotelinventoryapp/src/app/app.html
+++ b/apps/hotelinventoryapp/src/app/app.html
@@ -1,3 +1,4 @@
 <hotel-inventory-app-nx-welcome></hotel-inventory-app-nx-welcome>
 <hotel-inventory-app-rooms></hotel-inventory-app-rooms>
+<hotel-inventory-app-alert></hotel-inventory-app-alert>
 <router-outlet></router-outlet>
